<resources>

    <string name="app_name">BrewCounter</string>

    <!-- Menu buttons -->
    <string name="session_mode">Session Mode</string>
    <string name="total_tally">Total Tally</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="total_statistics">Total Statistics</string>
    <string name="session_history">Session History</string>
    <string name="set_prices">Set Drink Prices</string>
    <string name="session_total_cost">Session Cost</string>

    <!-- Drinks -->
    <string name="beer033">Beer 0.33L</string>
    <string name="beer05">Beer 0.5L</string>
    <string name="long_drink">Long Drink</string>
    <string name="cider">Cider</string>
    <string name="wine_glass">Wine Glass</string>
    <string name="shots">Shots</string>
    <string name="default_amount">0</string>
    <string name="default_price">0 €</string>
    <string name="price">Price</string>

    <!-- Buttons -->
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_dismiss">Dismiss</string>

    <!-- Session creation stuff -->
    <string name="new_session">Create new session</string>
    <string name="enter_title">Title:</string>
    <string name="enter_length">Session length</string>
    <string name="session_length_help">Session length\n8 to 24 hours</string>
    <string name="button_submit">Submit</string>

    <!-- Session Stuff -->
    <string name="session_title">This is title</string>
    <string name="session_start_time">Start Time:</string>
    <string name="session_end_time">End Time:</string>


</resources>
