<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            tools:context=".MainActivity"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="140dp"
                    android:gravity="center_horizontal">
                <Button
                        android:text="@string/total_tally"
                        android:layout_width="124dp"
                        android:layout_height="49dp"
                        android:id="@+id/btnTally"


                />
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="60dp"
                    android:gravity="center_horizontal">
                <Button
                        android:text="@string/session_mode"
                        android:layout_width="wrap_content"
                        android:layout_height="49dp"
                        android:id="@+id/btnSession"


                />
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="60dp"
                    android:gravity="center_horizontal">
                <Button
                        android:text="@string/statistics"
                        android:layout_width="124dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnStatistic"

                />
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="60dp">
                <Button
                        android:text="@string/settings"
                        android:layout_width="124dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/btnSettings"

                />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>