<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <android.support.constraint.ConstraintLayout
            android:layout_width="247dp"
            android:layout_height="320dp"
            android:background="@drawable/layout_border_light_gray"
            tools:layout_editor_absoluteY="148dp" tools:layout_editor_absoluteX="80dp"
            android:id="@+id/constraintLayout2">

        <TextView
                android:text="@string/default_amount"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvShotsShowAmount" android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/tvWgShowAmount"
                android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="40dp"/>
        <TextView
                android:text="@string/session_title"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvTitleShow" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"/>
        <TextView
                android:text="@string/beer033"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSbShow" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleShow" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/beer05"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLbShow"
                app:layout_constraintTop_toBottomOf="@+id/tvSbShow" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/long_drink"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLdShow" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLbShow" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/cider"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCiderShow" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLdShow" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/wine_glass"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvWgShow"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvCiderShow" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"/>
        <TextView
                android:text="@string/shots"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvShotShow"
                app:layout_constraintTop_toBottomOf="@+id/tvWgShow" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"/>
        <TextView
                android:text="@string/default_amount"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSbShowAmount"
                app:layout_constraintTop_toBottomOf="@+id/tvTitleShow" android:layout_marginTop="8dp"
                android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="40dp"/>
        <TextView
                android:text="@string/default_amount"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLbShowAmount" android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/tvSbShowAmount"
                android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="40dp"/>
        <TextView
                android:text="@string/default_amount"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvLdShowAmount"
                app:layout_constraintTop_toBottomOf="@+id/tvLbShowAmount"
                android:layout_marginTop="14dp" android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="40dp"/>
        <TextView
                android:text="@string/default_amount"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCiderShowAmount" android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/tvLdShowAmount"
                android:layout_marginEnd="40dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="40dp"/>
        <TextView
                android:text="@string/default_amount"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvWgShowAmount"
                app:layout_constraintTop_toBottomOf="@+id/tvCiderShowAmount"
                android:layout_marginTop="14dp" android:layout_marginEnd="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="40dp"/>
        <TextView
                android:text="@string/default_amount"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvCostShowAmount"
                android:layout_marginEnd="45dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginRight="45dp" android:layout_marginTop="14dp"
                app:layout_constraintTop_toBottomOf="@+id/tvShotsShowAmount"/>
        <TextView
                android:text="@string/session_total_cost"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tvSessionCost" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tvShotShow"/>
        <Button
                android:text="@string/button_dismiss"
                android:background="@android:color/transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mBtnDismiss"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginBottom="2dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>