<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/AppTheme"
        android:background="@color/colorLightGray"
        tools:context=".startSessionActivity">
    <android.support.constraint.ConstraintLayout
            android:layout_width="395dp"
            android:layout_height="203dp" android:layout_marginTop="232dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            android:background="@color/colorWhite">

        <TextView
                android:text="@string/enter_length"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="110dp"
                android:layout_height="65dp" android:id="@+id/tvEnterLength"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/tvEnterTitle"/>
        <EditText
                android:layout_width="248dp"
                android:layout_height="49dp"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/etvInputTitle"
                app:layout_constraintStart_toEndOf="@+id/tvEnterTitle"
                android:layout_marginStart="12dp" android:layout_marginLeft="12dp"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/tvNewSession"/>
        <TextView
                android:text="@string/enter_title"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_width="110dp"
                android:layout_height="65dp" android:id="@+id/tvEnterTitle"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvNewSession"/>
        <EditText
                android:layout_width="93dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etvTime" app:layout_constraintStart_toEndOf="@+id/tvEnterLength"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/etvInputTitle"/>
        <TextView
                android:text="@string/session_length_help"
                android:gravity="center"
                android:textAlignment="gravity"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:id="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/etvTime" android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp" android:layout_marginTop="44dp"
                app:layout_constraintTop_toBottomOf="@+id/etvInputTitle"/>
        <TextView
                android:text="@string/new_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:id="@+id/tvNewSession" android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="92dp" android:layout_marginStart="92dp"/>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>