<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TotalStatisticsActivity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical">

        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/sBeerLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="32dp">
            <TextView
                    android:text="@string/beer033"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSmallBeer"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_amount"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSbAmount"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_price"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSbTotal"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/lBeerLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/sBeerLay" android:layout_marginTop="32dp">
            <TextView
                    android:text="@string/beer05"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLargeBeer"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_amount"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLbAmount"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_price"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLbTotal"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/longDrinkLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/lBeerLay" android:layout_marginTop="32dp">
            <TextView
                    android:text="@string/long_drink"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLongDrink"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_amount"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLdAmount"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_price"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvLdTotal"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/ciderLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/longDrinkLay" android:layout_marginTop="32dp">
            <TextView
                    android:text="@string/cider"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCider"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_amount"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCiderAmount"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_price"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvCiderTotal"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>

        </LinearLayout>


        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/wineGlassLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ciderLay" android:layout_marginTop="32dp">
            <TextView
                    android:text="@string/wine_glass"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvWineGlass"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_amount"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvWgAmount"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_price"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvWgTotal"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/shotsLay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/wineGlassLay" android:layout_marginTop="32dp">
            <TextView
                    android:text="@string/shots"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_width="111dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvShot"
                    android:layout_marginLeft="24dp"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_amount"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvShotAmount"
                    android:layout_gravity="center"
            />
            <Space
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1">
            </Space>

            <TextView
                    android:text="@string/default_price"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvShotTotal"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>